--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
     "craftcms/cms": "^4.4.0",
+    "craftcms/element-api": "3.0.1.1",
     "craftcms/redactor": "3.0.4",
     "vlucas/phpdotenv": "^5.4.0"
   },
